kmbox_libs/include/kmboxAIlib/common.h


typedef enum {
    IMAGE_FORMAT_GRAY8,
    IMAGE_FORMAT_RGB888,
    IMAGE_FORMAT_RGBA8888,
    IMAGE_FORMAT_YUV420SP_NV21,
    IMAGE_FORMAT_YUV420SP_NV12,
    IMAGE_FORMAT_BGR_888,
} image_format_t;
typedef struct {
    int width;
    int height;
    int width_stride;
    int height_stride;
    image_format_t format;
    unsigned char* virt_addr;
    int size;
    int fd;
} image_buffer_t;
typedef struct {
    int left;
    int top;
    int right;
    int bottom;
} image_rect_t;
typedef struct {
    int x;
    int y;
    int w;
    int h;
    float angle;
} image_obb_box_t;