kmbox_libs/include/kmboxAIlib/kmboxYOLO.h

typedef struct {
    rknn_context rknn_ctx;          
    rknn_input_output_num io_num;   
    rknn_tensor_attr* input_attrs; 
    rknn_tensor_attr* output_attrs;
    int model_channel;  
    int model_width;    
    int model_height;   
    bool is_quant;      
    float NMS_THRESH;   
    float BOX_THRESH;   
    int OBJ_CLASS_NUM;  
    int yoloType;       
    int anchor[3][6];   
} rknn_context_t;
typedef struct {
    image_rect_t box;   
    float prop;         
    int cls_id;         
} object_detect_result;
typedef struct {
    int id;         
    int count;      
    object_detect_result results[OBJ_NUMB_MAX_SIZE];
} object_detected_list;