kmbox-ai-rust/src/bindings/kmboxYOLO.h.rs

unsafe extern "C" {
    pub fn rknn_destroy(context: rknn_context) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_query(
        context: rknn_context,
        cmd: rknn_query_cmd,
        info: *mut ::std::os::raw::c_void,
        size: u32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_inputs_set(
        context: rknn_context,
        n_inputs: u32,
        inputs: *mut rknn_input,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_batch_core_num(
        context: rknn_context,
        core_num: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_core_mask(
        context: rknn_context,
        core_mask: rknn_core_mask,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_run(context: rknn_context, extend: *mut rknn_run_extend) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_wait(context: rknn_context, extend: *mut rknn_run_extend) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_outputs_get(
        context: rknn_context,
        n_outputs: u32,
        outputs: *mut rknn_output,
        extend: *mut rknn_output_extend,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_outputs_release(
        context: rknn_context,
        n_ouputs: u32,
        outputs: *mut rknn_output,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_create_mem_from_phys(
        ctx: rknn_context,
        phys_addr: u64,
        virt_addr: *mut ::std::os::raw::c_void,
        size: u32,
    ) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem_from_fd(
        ctx: rknn_context,
        fd: i32,
        virt_addr: *mut ::std::os::raw::c_void,
        size: u32,
        offset: i32,
    ) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem_from_mb_blk(
        ctx: rknn_context,
        mb_blk: *mut ::std::os::raw::c_void,
        offset: i32,
    ) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem(ctx: rknn_context, size: u32) -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_create_mem2(ctx: rknn_context, size: u64, alloc_flags: u64)
    -> *mut rknn_tensor_mem;
}
unsafe extern "C" {
    pub fn rknn_destroy_mem(ctx: rknn_context, mem: *mut rknn_tensor_mem) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_weight_mem(
        ctx: rknn_context,
        mem: *mut rknn_tensor_mem,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_internal_mem(
        ctx: rknn_context,
        mem: *mut rknn_tensor_mem,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_io_mem(
        ctx: rknn_context,
        mem: *mut rknn_tensor_mem,
        attr: *mut rknn_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_input_shape(
        ctx: rknn_context,
        attr: *mut rknn_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_set_input_shapes(
        ctx: rknn_context,
        n_inputs: u32,
        attr: *mut rknn_tensor_attr,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_mem_sync(
        context: rknn_context,
        mem: *mut rknn_tensor_mem,
        mode: rknn_mem_sync_mode,
    ) -> ::std::os::raw::c_int;
}
pub const image_format_t_IMAGE_FORMAT_GRAY8: image_format_t = 0;
pub const image_format_t_IMAGE_FORMAT_RGB888: image_format_t = 1;
pub const image_format_t_IMAGE_FORMAT_RGBA8888: image_format_t = 2;
pub const image_format_t_IMAGE_FORMAT_YUV420SP_NV21: image_format_t = 3;
pub const image_format_t_IMAGE_FORMAT_YUV420SP_NV12: image_format_t = 4;
pub const image_format_t_IMAGE_FORMAT_BGR_888: image_format_t = 5;
#[doc = " @brief Image pixel format\n"]
pub type image_format_t = ::std::os::raw::c_uint;
#[doc = " @brief Image buffer\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct image_buffer_t {
    pub width: ::std::os::raw::c_int,
    pub height: ::std::os::raw::c_int,
    pub width_stride: ::std::os::raw::c_int,
    pub height_stride: ::std::os::raw::c_int,
    pub format: image_format_t,
    pub virt_addr: *mut ::std::os::raw::c_uchar,
    pub size: ::std::os::raw::c_int,
    pub fd: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of image_buffer_t"][::std::mem::size_of::<image_buffer_t>() - 40usize];
    ["Alignment of image_buffer_t"][::std::mem::align_of::<image_buffer_t>() - 8usize];
    ["Offset of field: image_buffer_t::width"]
        [::std::mem::offset_of!(image_buffer_t, width) - 0usize];
    ["Offset of field: image_buffer_t::height"]
        [::std::mem::offset_of!(image_buffer_t, height) - 4usize];
    ["Offset of field: image_buffer_t::width_stride"]
        [::std::mem::offset_of!(image_buffer_t, width_stride) - 8usize];
    ["Offset of field: image_buffer_t::height_stride"]
        [::std::mem::offset_of!(image_buffer_t, height_stride) - 12usize];
    ["Offset of field: image_buffer_t::format"]
        [::std::mem::offset_of!(image_buffer_t, format) - 16usize];
    ["Offset of field: image_buffer_t::virt_addr"]
        [::std::mem::offset_of!(image_buffer_t, virt_addr) - 24usize];
    ["Offset of field: image_buffer_t::size"]
        [::std::mem::offset_of!(image_buffer_t, size) - 32usize];
    ["Offset of field: image_buffer_t::fd"][::std::mem::offset_of!(image_buffer_t, fd) - 36usize];
};
#[doc = " @brief Image rectangle\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct image_rect_t {
    pub left: ::std::os::raw::c_int,
    pub top: ::std::os::raw::c_int,
    pub right: ::std::os::raw::c_int,
    pub bottom: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of image_rect_t"][::std::mem::size_of::<image_rect_t>() - 16usize];
    ["Alignment of image_rect_t"][::std::mem::align_of::<image_rect_t>() - 4usize];
    ["Offset of field: image_rect_t::left"][::std::mem::offset_of!(image_rect_t, left) - 0usize];
    ["Offset of field: image_rect_t::top"][::std::mem::offset_of!(image_rect_t, top) - 4usize];
    ["Offset of field: image_rect_t::right"][::std::mem::offset_of!(image_rect_t, right) - 8usize];
    ["Offset of field: image_rect_t::bottom"]
        [::std::mem::offset_of!(image_rect_t, bottom) - 12usize];
};
#[doc = " @brief Image obb rectangle\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct image_obb_box_t {
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
    pub w: ::std::os::raw::c_int,
    pub h: ::std::os::raw::c_int,
    pub angle: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of image_obb_box_t"][::std::mem::size_of::<image_obb_box_t>() - 20usize];
    ["Alignment of image_obb_box_t"][::std::mem::align_of::<image_obb_box_t>() - 4usize];
    ["Offset of field: image_obb_box_t::x"][::std::mem::offset_of!(image_obb_box_t, x) - 0usize];
    ["Offset of field: image_obb_box_t::y"][::std::mem::offset_of!(image_obb_box_t, y) - 4usize];
    ["Offset of field: image_obb_box_t::w"][::std::mem::offset_of!(image_obb_box_t, w) - 8usize];
    ["Offset of field: image_obb_box_t::h"][::std::mem::offset_of!(image_obb_box_t, h) - 12usize];
    ["Offset of field: image_obb_box_t::angle"]
        [::std::mem::offset_of!(image_obb_box_t, angle) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rknn_context_t {
    pub rknn_ctx: rknn_context,
    pub io_num: rknn_input_output_num,
    pub input_attrs: *mut rknn_tensor_attr,
    pub output_attrs: *mut rknn_tensor_attr,
    pub model_channel: ::std::os::raw::c_int,
    pub model_width: ::std::os::raw::c_int,
    pub model_height: ::std::os::raw::c_int,
    pub is_quant: bool,
    pub NMS_THRESH: f32,
    pub BOX_THRESH: f32,
    pub OBJ_CLASS_NUM: ::std::os::raw::c_int,
    pub yoloType: ::std::os::raw::c_int,
    pub anchor: [[::std::os::raw::c_int; 6usize]; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of rknn_context_t"][::std::mem::size_of::<rknn_context_t>() - 136usize];
    ["Alignment of rknn_context_t"][::std::mem::align_of::<rknn_context_t>() - 8usize];
    ["Offset of field: rknn_context_t::rknn_ctx"]
        [::std::mem::offset_of!(rknn_context_t, rknn_ctx) - 0usize];
    ["Offset of field: rknn_context_t::io_num"]
        [::std::mem::offset_of!(rknn_context_t, io_num) - 8usize];
    ["Offset of field: rknn_context_t::input_attrs"]
        [::std::mem::offset_of!(rknn_context_t, input_attrs) - 16usize];
    ["Offset of field: rknn_context_t::output_attrs"]
        [::std::mem::offset_of!(rknn_context_t, output_attrs) - 24usize];
    ["Offset of field: rknn_context_t::model_channel"]
        [::std::mem::offset_of!(rknn_context_t, model_channel) - 32usize];
    ["Offset of field: rknn_context_t::model_width"]
        [::std::mem::offset_of!(rknn_context_t, model_width) - 36usize];
    ["Offset of field: rknn_context_t::model_height"]
        [::std::mem::offset_of!(rknn_context_t, model_height) - 40usize];
    ["Offset of field: rknn_context_t::is_quant"]
        [::std::mem::offset_of!(rknn_context_t, is_quant) - 44usize];
    ["Offset of field: rknn_context_t::NMS_THRESH"]
        [::std::mem::offset_of!(rknn_context_t, NMS_THRESH) - 48usize];
    ["Offset of field: rknn_context_t::BOX_THRESH"]
        [::std::mem::offset_of!(rknn_context_t, BOX_THRESH) - 52usize];
    ["Offset of field: rknn_context_t::OBJ_CLASS_NUM"]
        [::std::mem::offset_of!(rknn_context_t, OBJ_CLASS_NUM) - 56usize];
    ["Offset of field: rknn_context_t::yoloType"]
        [::std::mem::offset_of!(rknn_context_t, yoloType) - 60usize];
    ["Offset of field: rknn_context_t::anchor"]
        [::std::mem::offset_of!(rknn_context_t, anchor) - 64usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct object_detect_result {
    pub box_: image_rect_t,
    pub prop: f32,
    pub cls_id: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of object_detect_result"][::std::mem::size_of::<object_detect_result>() - 24usize];
    ["Alignment of object_detect_result"][::std::mem::align_of::<object_detect_result>() - 4usize];
    ["Offset of field: object_detect_result::box_"]
        [::std::mem::offset_of!(object_detect_result, box_) - 0usize];
    ["Offset of field: object_detect_result::prop"]
        [::std::mem::offset_of!(object_detect_result, prop) - 16usize];
    ["Offset of field: object_detect_result::cls_id"]
        [::std::mem::offset_of!(object_detect_result, cls_id) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct object_detected_list {
    pub id: ::std::os::raw::c_int,
    pub count: ::std::os::raw::c_int,
    pub results: [object_detect_result; 128usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of object_detected_list"][::std::mem::size_of::<object_detected_list>() - 3080usize];
    ["Alignment of object_detected_list"][::std::mem::align_of::<object_detected_list>() - 4usize];
    ["Offset of field: object_detected_list::id"]
        [::std::mem::offset_of!(object_detected_list, id) - 0usize];
    ["Offset of field: object_detected_list::count"]
        [::std::mem::offset_of!(object_detected_list, count) - 4usize];
    ["Offset of field: object_detected_list::results"]
        [::std::mem::offset_of!(object_detected_list, results) - 8usize];
};
